compute.tf
resource "aws_instance" "windows_ec2" {
  ami = "ami-0c02fb55956c7d316"
  instance_type = "t3.micro"
  tags = {
    Name = "windows-ec2"
    OS = "Windows"
  }
}
